--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Jose Dominguez
-subtitle:
-description:
+subtitle: "C#, .net, sitecore & some other stuff"
+description: "C#, .net, sitecore & some other stuff"
 author: José Domínguez
 language: en
 timezone: UTC
