--- a/themes/hueman/_config.yml
+++ b/themes/hueman/_config.yml
@@ -17,6 +17,7 @@ customize:
     social_links: # for more icons, please see http://fontawesome.io/icons/#brand
         github: https://github.com/josedbaez
         stack-overflow: https://stackoverflow.com/users/991459/josedbaez
+        stack-exchange: http://sitecore.stackexchange.com/users/88/josedbaez
         rss: /atom.xml
 
 # Widgets
