first spanish post

--- a/es/_config.yml
+++ b/es/_config.yml
@@ -70,7 +70,7 @@ theme: hueman
 deploy:
   type: git
   repo: git@github.com:josedbaez/josedbaez.github.io.git
-  branch: master
+  branch: master-espanol
 
 # Feed
 feed:
