--- a/es/themes/hueman/_config.yml
+++ b/es/themes/hueman/_config.yml
@@ -9,7 +9,7 @@ customize:
         width: 165
         height: 60
         url: /images/logo4.png
-    theme_color: '#da1e25'
+    theme_color: '#006bde'
     highlight: androidstudio
     sidebar: left # sidebar position, options: left, right
     thumbnail: true # enable posts thumbnail, options: true, false
