footer cosmetic changes. add accent mark to name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Jose Dominguez
+title: José Domínguez
 subtitle: C#, .net, sitecore & some other stuff
 description: C#, .net, sitecore & some other stuff
 author: José Domínguez
