--- a/themes/hueman/_config.yml.example
+++ b/themes/hueman/_config.yml.example
@@ -102,4 +102,4 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
-        Hexo: http://hexo.io
+        Hexo: https://hexo.io
